tests/error/03_assignment.py
# Mis-matched type in assignment
# Type Checker Error: Assignment type mismatch. RHS should be Type<int> instead of Type<str>.
a: int = "hello"
